--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,9 +1,9 @@
-# _ _____    ____             __ _
-#(_)___ /   / ___|___  _ __  / _(_) __ _
-#| | |_ \  | |   / _ \| '_ \| |_| |/ _` |
-#| |___) | | |__| (_) | | | |  _| | (_| |
-#|_|____/   \____\___/|_| |_|_| |_|\__, |
-#                                  |___/
+# ___ _____    ____             __ _
+#|_ _|___ /   / ___|___  _ __  / _(_) __ _
+# | |  |_ \  | |   / _ \| '_ \| |_| |/ _` |
+# | | ___) | | |__| (_) | | | |  _| | (_| |
+#|___|____/   \____\___/|_| |_|_| |_|\__, |
+#                                    |___/
 
 # KEY DEFINITIONS TO REMEMBER
 
@@ -57,7 +57,7 @@ workspace 10 output $secondMonitor
 ##################################
 # Launcher Applications Shortcut #
 ##################################
-bindsym $mod+d exec --no-startup-id dmenu_run -i -fn 'NotoMonoRegular:bold:pixelsize=16'
+bindsym $mod+d exec --no-startup-id dmenu_run -i -nb '#101010' -fn 'Ubuntu Mono:bold:pixelsize=17' -h 30
 bindsym $mod+F12 exec --no-startup-id rofi -show run -font "Noto Sans 13"
 
 
@@ -405,20 +405,17 @@ popup_during_fullscreen smart
 exec_always --no-startup-id picom --config ~/.config/i3/picom.conf
 bindsym control+mod1+o exec --no-startup-id ~/.config/i3/scripts/picom-toggle.sh
 
-############
-# I3 Theme #
-############
-##START THEMING WM
-#Theme name : ArcoLinux Default
+    ##START THEMING WM
+    #Theme name : ArcoLinux Default
 
-# Window color settings
-# class                 border  backgr. text    indicator
-client.focused          #6790EB #6790EB #e5e5e5 #6790EB
-client.unfocused        #222222 #222222 #aaaaaa #222222
-client.focused_inactive #222222 #222222 #a9a9a9 #222222
-client.placeholder      #222222 #222222 #aaaaaa #222222
-client.urgent           #d42121 #d42121 #f7f7f7 #d42121
+    # Window color settings
+    # class                 border  backgr. text    indicator
+    client.focused          #6790EB #6790EB #e5e5e5 #6790EB
+    client.unfocused        #222222 #222222 #aaaaaa #222222
+    client.focused_inactive #222222 #222222 #a9a9a9 #222222
+    client.placeholder      #222222 #222222 #aaaaaa #222222
+    client.urgent           #d42121 #d42121 #f7f7f7 #d42121
 
-client.background       #242424
+    client.background       #242424
 
-##STOP THEMING WM
+    ##STOP THEMING WM
