--- a/.config/i3/config
+++ b/.config/i3/config
@@ -37,21 +37,21 @@ set $right l
 ##################
 # Screen Options #
 ##################
-exec --no-startup-id xrandr --output HDMI2 --right-of HDMI1 --auto
+#exec --no-startup-id xrandr --output HDMI-1-0 --above eDP1 --auto
 
-set $firstMonitor HDMI1
-set $secondMonitor HDMI2
+#set $firstMonitor eDP1
+#set $secondMonitor HDMI-1-0
 
-workspace 1 output $firstMonitor
-workspace 2 output $firstMonitor
-workspace 3 output $firstMonitor
-workspace 4 output $firstMonitor
-workspace 5 output $firstMonitor
-workspace 6 output $secondMonitor
-workspace 7 output $secondMonitor
-workspace 8 output $secondMonitor
-workspace 9 output $secondMonitor
-workspace 10 output $secondMonitor
+#workspace 1 output $firstMonitor
+#workspace 2 output $firstMonitor
+#workspace 3 output $firstMonitor
+#workspace 4 output $firstMonitor
+#workspace 5 output $firstMonitor
+#workspace 6 output $secondMonitor
+#workspace 7 output $secondMonitor
+#workspace 8 output $secondMonitor
+#workspace 9 output $secondMonitor
+#workspace 10 output $secondMonitor
 
 
 ##################################
