--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,3 +1,5 @@
 {
-  "clangd.path": "/home/stolen/.config/coc/extensions/coc-clangd-data/install/10.0.0/clangd_10.0.0/bin/clangd"
+  "clangd.path": "/home/stolen/.config/coc/extensions/coc-clangd-data/install/10.0.0/clangd_10.0.0/bin/clangd",
+  "clangd.disableSnippetCompletion": true,
+  "pairs.enableCharacters": ["(", "[", "{",  "'", "\"", "`"]
 }
