--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -31,7 +31,7 @@ alert = #bd2c40
 ###########
 [bar/mainbar]
 
-monitor = eDP1
+monitor = eDP-1
 monitor-strict = false
 override-redirect = false
 bottom = false
@@ -61,7 +61,7 @@ font-5 = "Font Awesome 5 Free:size=10;0"
 
 modules-left = i3 xwindow
 modules-center = previous spotify next
-modules-right = date volume redshift xbacklight battery
+modules-right = date volume brightness redshift battery
 
 separator = |
 
@@ -73,6 +73,107 @@ tray-maxsize = 20
 tray-scale = 1.0
 tray-position = right
 tray-background = ${colors.background}
+
+enable-ipc = true
+
+scroll-up = i3wm-wsnext
+scroll-down = i3wm-wsprev
+
+cursor-click = pointer
+
+#######################
+# Top Bar Dual Screen #
+#######################
+[bar/top_bar]
+
+monitor = HDMI-1-0
+monitor-strict = false
+override-redirect = false
+bottom = false
+fixed-center = true
+width = 100%
+height = 30
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+radius = 0.0
+line-size = 2
+line-color = #000000
+
+padding-left = 1
+padding-right = 1
+
+module-margin-left = 3
+module-margin-right = 3
+
+font-0 = "Noto Sans:size=10;0"
+font-1 = "FontAwesome:size=10;0"
+font-2 = "Noto Sans:size=10;0"
+font-3 = "Noto Sans Mono:size=10;0"
+font-4 = "Font Awesome 5 Brands:size=10;0"
+font-5 = "Font Awesome 5 Free:size=10;0"
+
+modules-left = i3 xwindow
+modules-center = previous spotify next
+modules-right = date volume brightness redshift battery
+
+separator = |
+
+tray-detached = false
+tray-offset-x = 0
+tray-offset-y = 0
+tray-padding = 2
+tray-maxsize = 20
+tray-scale = 1.0
+tray-position = right
+tray-background = ${colors.background}
+
+enable-ipc = true
+
+scroll-up = i3wm-wsnext
+scroll-down = i3wm-wsprev
+
+cursor-click = pointer
+
+##########################
+# Bottom Bar Dual Screen #
+##########################
+[bar/bottom_bar]
+
+monitor = eDP-1
+monitor-strict = false
+override-redirect = false
+bottom = true
+fixed-center = true
+width = 100%
+height = 30
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+radius = 0.0
+line-size = 2
+line-color = #000000
+
+padding-left = 1
+padding-right = 1
+
+module-margin-left = 3
+module-margin-right = 3
+
+font-0 = "Noto Sans:size=10;0"
+font-1 = "FontAwesome:size=10;0"
+font-2 = "Noto Sans:size=10;0"
+font-3 = "Noto Sans Mono:size=10;0"
+font-4 = "Font Awesome 5 Brands:size=10;0"
+font-5 = "Font Awesome 5 Free:size=10;0"
+
+modules-left = i3
+/*modules-center = previous spotify next*/
+/*modules-right = date volume brightness redshift battery*/
+
+separator = |
 
 enable-ipc = true
 
@@ -185,6 +286,18 @@ animation-charging-framerate = 750
 
 ################################################################################
 
+[module/brightness]
+type = internal/backlight
+card = intel_backlight
+label = %percentage%%
+format = %{A1:brightnessctl s 1%:}%{A2:brightnessctl s 30%:}%{A3:brightnessctl s 100%:}%{A4:brightnessctl s +5%:}%{A5:brightnessctl s 5%-:}<ramp> <label>%{A}%{A}%{A}%{A}%{A}
+ramp-0 = "%{T1} %{T-}"
+format-foreground = ${colors.foreground}
+format-background = ${colors.background}
+format-underline = #9f78e1
+
+################################################################################
+
 [module/date]
 ;https://github.com/jaagr/polybar/wiki/Module:-date
 type = internal/date
@@ -282,32 +395,6 @@ format-muted-background = ${colors.background}
 
 ################################################################################
 
-[module/xbacklight]
-;https://github.com/jaagr/polybar/wiki/Module:-xbacklight
-type = internal/xbacklight
-
-format = <label>
-format-prefix = "   "
-format-prefix-foreground = ${colors.foreground}
-format-prefix-background = ${colors.background}
-format-prefix-underline = #9f78e1
-format-underline = #9f78e1
-label = %percentage%%
-bar-width = 10
-bar-indicator = 
-bar-indicator-foreground = #fff
-bar-indicator-font = 2
-bar-fill = 
-bar-fill-font = 2
-bar-fill-foreground = #9f78e1
-bar-empty = 
-bar-empty-font = 2
-bar-empty-foreground = #fff
-format-foreground = ${colors.foreground}
-format-background = ${colors.background}
-
-################################################################################
-
 [module/xwindow]
 ;https://github.com/jaagr/polybar/wiki/Module:-xwindow
 type = internal/xwindow
@@ -317,4 +404,3 @@ label-maxlen = 50
 
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
-
