--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -114,7 +114,7 @@ font-3 = "Noto Sans Mono:size=10;0"
 font-4 = "Font Awesome 5 Brands:size=10;0"
 font-5 = "Font Awesome 5 Free:size=10;0"
 
-modules-left = i3 xwindow
+modules-left = i3
 modules-center = previous spotify next
 modules-right = date volume brightness redshift battery
 
@@ -170,8 +170,8 @@ font-4 = "Font Awesome 5 Brands:size=10;0"
 font-5 = "Font Awesome 5 Free:size=10;0"
 
 modules-left = i3
-/*modules-center = previous spotify next*/
-/*modules-right = date volume brightness redshift battery*/
+modules-center =
+modules-right = xwindow
 
 separator = |
 
@@ -204,7 +204,7 @@ ws-icon-3 = 4;
 ws-icon-4 = 5;
 ws-icon-5 = 6;
 ws-icon-6 = 7;
-ws-icon-7 = 8;
+ws-icon-7 = 8;
 ws-icon-8 = 9;
 ws-icon-9 = 10;
 ws-icon-default = " "
@@ -388,7 +388,7 @@ format-volume-foreground = ${colors.foreground}
 format-volume-background = ${colors.background}
 format-volume-underline = #cd1f3f
 format-muted-prefix = "  "
-format-muted-prefix-foreground = "#ff0000"
+format-muted-prefix-foreground = ${colors.foreground}
 format-muted-underline = "#ff0000"
 format-muted-foreground = ${colors.foreground}
 format-muted-background = ${colors.background}
