--- a/.config/i3/config
+++ b/.config/i3/config
@@ -53,28 +53,13 @@ workspace 10 output $secondMonitor
 ################
 # Dmenu / Rofi #
 ################
-bindsym $mod+d exec --no-startup-id dmenu_run -i -nb '#101010' -sb '#6c244b' -fn 'Ubuntu Mono:bold:pixelsize=17' -h 30
+bindsym $mod+d exec --no-startup-id dmenu_run -i -nb '#101010' -sb '#6c244b' -fn 'Ubuntu Mono:bold:pixelsize=17' -h 30 -m 1
 bindsym $mod+F12 exec --no-startup-id rofi -show emoji -modi emoji
 
 
 ###################
 # Exit i3 Options #
 ###################
-bindsym control+mod1+X mode "$mode_system"
-
-set $mode_system System (k) lock, (l) logout, (u) suspend, (h) hibernate, (r) reboot, (s) shutdown
-mode "$mode_system" {
-    bindsym k exec --no-startup-id ~/.config/i3/scripts/i3exit.sh lock, mode "default"
-        bindsym l exec --no-startup-id ~/.config/i3/scripts/i3exit.sh logout, mode "default"
-        bindsym u exec --no-startup-id ~/.config/i3/scripts/i3exit.sh suspend, mode "default"
-        bindsym h exec --no-startup-id ~/.config/i3/scripts/i3exit.sh hibernate, mode "default"
-        bindsym r exec --no-startup-id ~/.config/i3/scripts/i3exit.sh reboot, mode "default"
-        bindsym s exec --no-startup-id ~/.config/i3/scripts/i3exit.sh shutdown, mode "default"
-
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-}
-
 bindsym $mod+Shift+e exec --no-startup-id arcolinux-logout
 bindsym $mod+X exec --no-startup-id arcolinux-logout
 
@@ -90,7 +75,6 @@ bindsym $mod+Shift+s exec --no-startup-id sh ~/.config/i3/scripts/screencheck.sh
 #######################
 # Kill Focused Window #
 #######################
-bindsym $mod+Shift+q kill
 bindsym $mod+q kill
 
 
@@ -136,22 +120,16 @@ bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
-bindsym $mod+Shift+1 move container to workspace 1; workspace 1
-bindsym $mod+Shift+2 move container to workspace 2; workspace 2
-bindsym $mod+Shift+3 move container to workspace 3; workspace 3
-bindsym $mod+Shift+4 move container to workspace 4; workspace 4
-bindsym $mod+Shift+5 move container to workspace 5; workspace 5
-bindsym $mod+Shift+6 move container to workspace 6; workspace 6
-bindsym $mod+Shift+7 move container to workspace 7; workspace 7
-bindsym $mod+Shift+8 move container to workspace 8; workspace 8
-bindsym $mod+Shift+9 move container to workspace 9; workspace 9
-bindsym $mod+Shift+0 move container to workspace 10; workspace 10
-
-bindsym Mod1+Tab workspace next
-bindsym Mod1+Shift+Tab workspace prev
-bindsym $mod+Tab workspace back_and_forth
-bindsym Mod1+Ctrl+Right workspace next
-bindsym Mod1+Ctrl+Left workspace prev
+bindsym $mod+Shift+1 move container to workspace 1
+bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+3 move container to workspace 3
+bindsym $mod+Shift+4 move container to workspace 4
+bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+6 move container to workspace 6
+bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+0 move container to workspace 10
 
 bindsym $mod+m move workspace to output up
 
@@ -234,20 +212,11 @@ exec_always --no-startup-id numlockx on
 exec --no-startup-id volumeicon
 
 
-###########
-# Polybar #
-###########
-#exec_always --no-startup-id ~/.config/polybar/launch.sh &
-
-
 ##########################
 # Applications Shortcuts #
 ##########################
 bindsym $mod+Return exec --no-startup-id alacritty;focus
 bindsym $mod+KP_Enter exec --no-startup-id alacritty;focus
-bindsym control+mod1+t exec --no-startup-id termite; focus
-bindsym control+mod1+Return exec --no-startup-id termite; focus
-bindsym control+mod1+KP_Enter exec --no-startup-id termite; focus
 bindsym F12 exec --no-startup-id xfce4-terminal --drop-down; focus
 
 bindsym --release $mod+Escape exec xkill
@@ -286,7 +255,6 @@ for_window [class="^Vlc$"] floating disable
 # Give Focus To Applications #
 ##############################
 for_window [class="Alacritty"] focus
-for_window [class="Termite"] focus
 
 
 ##################
@@ -301,6 +269,7 @@ bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 bindsym XF86AudioStop exec --no-startup-id playerctl stop
 
 bindsym Pause exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
+
 
 ##############
 # Brightness #
@@ -333,7 +302,7 @@ new_float pixel 1
 # i3 Gaps #
 ###########
 for_window [class="^.*"] border pixel 1
-gaps inner 10
+gaps inner 15
 gaps outer 0
 
 
